2-deployment/internal/controller/testdata/ingress-cr.yaml
apiVersion: apps.shudong.com/v1
kind: MyDeployment
metadata:
  name: mydeployment-test
spec:
  image: nginx
  port: 80
  replicas: 2
  expose:
    mode: ingress
    ingressDomain: www.shudong-test.com
    servicePort: 80
