2-deployment/internal/controller/testdata/ingress-service-expect.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydeployment-test
spec:
  selector:
    app: mydeployment-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
